syntax = "proto3";
package dymensionxyz.dymension.denommetadata;


import "gogoproto/gogo.proto";
import "dymension/denommetadata/tokenmetadata.proto";
option go_package = "github.com/dymensionxyz/dymension/v3/x/denommetadata/types";


message DenomMetadata {
  uint64 id = 1;
  TokenMetadata tokenMetadata = 2[ (gogoproto.nullable) = false ];
}
