syntax = "proto3";
package dymensionxyz.dymension.sequencer;

option go_package = "github.com/dymensionxyz/dymension/v3/x/sequencer/types";

// Metadata defines rollapp/sequencer extra information.
message SequencerMetadata {
  // moniker defines a human-readable name for the sequencer.
  string moniker = 1;
  // identity defines an optional identity signature (ex. UPort or Keybase).
  string identity = 2;
  // securityContact defines an optional email for security contact.
  string securityContact = 3;
  // details define other optional details.
  string details = 4;
  // bootstrap nodes list
  string p2p_seed = 5;
  // RPCs list
  repeated string rpcs = 6;
  // evm RPCs list
  repeated string evm_rpcs = 7;
  // REST API URLs
  repeated string rest_api_urls = 8;
  // block explorer URL
  string explorer_url = 9;
  // website URL
  string website = 10;
  // json dump the sequencer can add (limited by size)
  bytes extra_data = 11;
}
