syntax = "proto3";
package dymensionxyz.dymension.sequencer;

option go_package = "github.com/dymensionxyz/dymension/v3/x/sequencer/types";

import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/msg/v1/msg.proto";
import "dymensionxyz/dymension/sequencer/params.proto";

import "dymensionxyz/dymension/sequencer/metadata.proto";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateSequencer defines a method for creating a new sequencer.
  rpc CreateSequencer (MsgCreateSequencer) returns (MsgCreateSequencerResponse);
  // UpdateSequencerInformation defines a method for updating the sequencer's metadata.
  rpc UpdateSequencerInformation (MsgUpdateSequencerInformation) returns (MsgUpdateSequencerInformationResponse);
  // UpdateRewardAddress defines a method for updating the sequencer's reward address.
  rpc UpdateRewardAddress(MsgUpdateRewardAddress) returns (MsgUpdateRewardAddressResponse);
  // UpdateWhitelistedRelayers defines a method for updating the sequencer's whitelisted relater list.
  rpc UpdateWhitelistedRelayers(MsgUpdateWhitelistedRelayers) returns (MsgUpdateWhitelistedRelayersResponse);
  // UpdateOptInStatus allows toggling optedIn bool
  // NOTE: arguably should have just used UpdateSequencerInformation instead of having a new message, but want to avoid changing
  // frontends last minute.
  rpc UpdateOptInStatus (MsgUpdateOptInStatus) returns (MsgUpdateOptInStatus);
  rpc KickProposer (MsgKickProposer) returns (MsgKickProposerResponse);
  // Unbond defines a method for removing coins from sequencer's bond
  rpc Unbond (MsgUnbond) returns (MsgUnbondResponse);
  // IncreaseBond defines a method for increasing a sequencer's bond amount
  rpc IncreaseBond (MsgIncreaseBond) returns (MsgIncreaseBondResponse);
  // DecreaseBond defines a method for decreasing the bond of a sequencer.
  rpc DecreaseBond (MsgDecreaseBond) returns (MsgDecreaseBondResponse);
  // UpdateParams defines a (governance) operation for updating the module parameters.
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}



message MsgCreateSequencer {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1;
  // pubkey is the public key of the sequencers' dymint client, as a Protobuf Any.
  google.protobuf.Any dymintPubKey = 2 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
  // rollapp_id defines the rollapp to which the sequencer belongs.
  string rollapp_id = 3;
  // metadata defines the extra information for the sequencer.
  SequencerMetadata metadata = 4 [(gogoproto.nullable) = false];
  // entry bond for the sequencer.
  cosmos.base.v1beta1.Coin bond = 5 [(gogoproto.nullable) = false];
  // RewardAddr is the bech32-encoded sequencer's reward address. Empty is valid.
  // If empty, the creator address is used.
  string reward_addr = 6;
  // WhitelistedRelayers is an array of the whitelisted relayer addresses. Addresses are bech32-encoded strings.
  repeated string whitelisted_relayers = 7;
}

message MsgCreateSequencerResponse {}

// Try to kick the current proposer whose bond is below kick threshold
message MsgKickProposer {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1;
}

message MsgKickProposerResponse {}

message MsgUpdateSequencerInformation {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1;
  // metadata defines the extra information for the sequencer.
  SequencerMetadata metadata = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateSequencerInformationResponse {}

message MsgUpdateRewardAddress {
  option (cosmos.msg.v1.signer) = "creator";
  // Creator is the bech32-encoded address of the actor sending the update
  string creator = 1;
  // RewardAddr is a bech32 encoded sdk acc address
  string reward_addr = 2;
}

message MsgUpdateRewardAddressResponse {}

message MsgUpdateWhitelistedRelayers {
  option (cosmos.msg.v1.signer) = "creator";
  // Creator is the bech32-encoded address of the actor sending the update
  string creator = 1;
  // Relayers is an array of the whitelisted relayer addresses. Addresses are bech32-encoded strings.
  repeated string relayers = 2;
}

message MsgUpdateWhitelistedRelayersResponse {}

message MsgUpdateOptInStatus {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1;
  // OptedIn : the new value
  bool opted_in = 2;
}

message MsgUpdateOptInStatusResponse {}



// MsgUnbond defines a SDK message for performing an undelegation from a
// bond and a sequencer.
message MsgUnbond {
  option (cosmos.msg.v1.signer) = "creator";
  option      (gogoproto.equal) =     false;
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgUnbondResponse defines the Msg/Unbond response type.
message MsgUnbondResponse {
  // If unbonding the proposer, the completion time is the time at which the notice period will be completed.
  reserved 1;
  oneof completion_time { // NOTE: oneof for legacy reasons.
    // notice_period_completion_time is the time at which the notice period will be completed.
    google.protobuf.Timestamp notice_period_completion_time = 2 [ (gogoproto.stdtime) = true];
  }
}

// MsgIncreaseBond defines a SDK message for increasing the bond amount of a sequencer.
message MsgIncreaseBond {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // add_amount is the amount of coins to be added to the sequencer's bond.
  cosmos.base.v1beta1.Coin add_amount = 2 [(gogoproto.nullable) = false];
}

// MsgIncreaseBondResponse defines the Msg/IncreaseBond response type.
message MsgIncreaseBondResponse {}

// MsgDecreaseBond defines a SDK message for decreasing the bond of a sequencer.
message MsgDecreaseBond {
  option (cosmos.msg.v1.signer) = "creator";
  // creator is the bech32-encoded address of the sequencer account which is the account that the message was sent from.
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // decrease_amount is the amount of coins to decrease the bond by.
  cosmos.base.v1beta1.Coin decrease_amount = 2 [(gogoproto.nullable) = false];
}

// MsgDecreaseBondResponse defines the Msg/DecreaseBond response type.
message MsgDecreaseBondResponse {
  reserved 1;
}
